--- a/cfl-ctf-app-deploy.yaml
+++ b/cfl-ctf-app-deploy.yaml
@@ -9,7 +9,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ctf
+      app: cfl-ctf-challenge-2025
   strategy: {}
   template:
     metadata:
