update app image. svc no longer needed so dropped svc

--- a/cfl-ctf-app-deploy.yaml
+++ b/cfl-ctf-app-deploy.yaml
@@ -20,7 +20,6 @@ spec:
       nodeSelector:
         node.kubernetes.io/instance-type: k3s
       containers:
-      - image: kmaneshni/cfl-ctf-app:version3.0
-        name: cfl-ctf-app
-        resources: {}
-status: {}
+      - name: checker-container
+        image: kmaneshni/cfl-ctf-app:version3.0
+        restartPolicy: OnFailure # Or Never, depending on if you want it to retry
