--- a/cfl-ctf-app-deploy.yaml
+++ b/cfl-ctf-app-deploy.yaml
@@ -17,6 +17,7 @@ spec:
       labels:
         app: cfl-ctf-challenge-2025
     spec:
+      serviceAccountName: gitjob
       nodeSelector:
         node.kubernetes.io/instance-type: k3s
       containers:
